--- a/main.html
+++ b/main.html
@@ -41,27 +41,27 @@
                 연구원
             </a>
             <a class="t4 researcher" href="char/lucid.html">
-                <img src="img/lucidicon.jpg" alt="루시드 아이콘" />
+                <img src="img/lucidicon.png" alt="루시드 아이콘" />
                 <span>루시드</span>
             </a>
             <a class="t4 researcher" href="char/insane.html">
-                <img src="img/insaneicon.jpg" alt="인세인 아이콘" />
+                <img src="img/insaneicon.png" alt="인세인 아이콘" />
                 <span>인세인</span>
             </a>
             <a class="t4 researcher" href="char/sonata.html">
-                <img src="img/sonataicon.jpg" alt="소나타 아이콘" />
+                <img src="img/sonataicon.png" alt="소나타 아이콘" />
                 <span>소나타</span>
             </a>
             <a class="t4 researcher" href="char/cyan.html">
-                <img src="img/cyanicon.jpg" alt="사이안 아이콘" />
+                <img src="img/cyanicon.png" alt="사이안 아이콘" />
                 <span>사이안</span>
             </a>
             <a class="t4 researcher" href="char/acid.html">
-                <img src="img/acidicon.jpg" alt="애시드 아이콘" />
+                <img src="img/acidicon.png" alt="애시드 아이콘" />
                 <span>애시드</span>
             </a>
             <a class="t4 researcher" href="char/cantare.html">
-                <img src="img/cantareicon.jpg" alt="칸타레 아이콘" />
+                <img src="img/cantareicon.png" alt="칸타레 아이콘" />
                 <span>칸타레</span>
             </a>
         </section>
