--- a/char/sonata.html
+++ b/char/sonata.html
@@ -86,13 +86,12 @@
                 동시에 그걸 해낼 수 있는 사람은 자신 뿐이라고 주장하는 등 다소 오만한 태도를 보인다. 
                 이런 사고방식을 바탕으로 타인에 대한 무신뢰에서 비롯된 독단적인 행동을 보이기도 하지만, 
                 실제로 소나타가 꽤나 능력있는 편이며 실험 성공률도 높<span style="color:rgb(127, 127, 127); text-decoration: line-through;">고 어차피 말해 봤자 듣지도 않</span>기 때문에 
-                연구원들도 이 부분에 대해서 따로 건드리지 않는다
+                연구원들도 이 부분에 대해서 따로 건드리지 않는다<span style="color:rgb(169, 169, 169); text-decoration: line-through;">(루시드 제외)</span>.
                 <br><br>이러한 성격의 근원은 유아기와 청소년기를 거치며 자연스럽게 교정되거나 조율되지 않고 오히려 강화된 자기중심성에 있다. 
                 <br><br>대부분의 사람들은 어린 시절 누구나 ‘나는 특별하다’거나 ‘무엇이든 할 수 있다’는 과도한 자기확신을 가지나, 
                 성장 과정에서 현실 검증과 사회적 상호작용을 통해 이를 수정해 나간다. 
                 그러나 소나타는 또래에 비해 비상한 두뇌와 이를 입증할 만한 실제 성취 경험이 풍부했기에 오히려 ‘나는 다르다’, ‘나는 할 수 있다’라는 자기확신이 반복적인 성공을 통해 더욱 견고해졌고,
                 이것이 현재의 극단적으로 현실 왜곡적인 사고방식과 독단적 태도의 기반이 되었다고 할 수 있다.
-                <span style="color:rgb(169, 169, 169); text-decoration: line-through;">(루시드 제외)</span>.
                 <br><br>모든 연구원들은 소나타가 도덕적으로 결함이 있다고 평가하는데, 이는 
                 <span style="font-weight: bold;">단순히 악의를 가졌거나 사이코패스같이 공감 능력이 결여된 것이</span> <span style="font-weight: bold; color: red;"> 아니라</span> 
                 <span style="font-weight: bold;">효율과 결과를 최우선시하는 가치관</span>에서 비롯된 영향이 더 크다. 
@@ -141,4 +140,5 @@
     </main>
 
 </body>
+
 </html>
