--- a/char/lucid.html
+++ b/char/lucid.html
@@ -30,8 +30,9 @@
             <a class="t1" style="font-size: 2.5rem; font-weight: bold;">루시드</a>
         </nav>    
         <section class="hidehh">
-            <div>
-                <img src="../img/lucid.png" class="ygyz" alt="루시드 연구원증">
+            <div style="text-align: center;">
+                <img src="../img/lucid.png" id="profile" class="ygyz" alt="루시드 연구원증" onclick="profileChange()">
+                <img src="../img/lucidprf.png" id="profileprf" style="display: none;" alt="루시드 전신">
             </div>
             <div>
             </div>
