--- a/char/cantare.html
+++ b/char/cantare.html
@@ -45,7 +45,7 @@
                 <tr>
                     <th rowspan="2" class="t4" style="font-weight: bold;">출생</th>
                     <td class="t4">12024년</td>
-                    <tr><td class="t4">대한민국</td></tr>
+                    <tr><td class="t4">■■■■</td></tr>
 
                 </tr>
                 <tr>
@@ -115,4 +115,5 @@
     </main>
 
 </body>
+
 </html>
